Readd support for 1.16.x, HopperFilter fix